--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "axios": "^1.5.1",
     "bootstrap": "^5.2.3",
+    "primeicons": "^6.0.1",
     "primereact": "^10.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
