--- a/package.json
+++ b/package.json
@@ -33,8 +33,13 @@
     "react-router-dom": "^6.16.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.23.0",
+    "@babel/preset-env": "^7.22.20",
     "@parcel/transformer-sass": "^2.9.3",
+    "@testing-library/react": "^14.0.0",
+    "babel-jest": "^29.7.0",
     "buffer": "^6.0.3",
+    "jest": "^29.7.0",
     "parcel": "^2.9.3",
     "process": "^0.11.10",
     "sass-loader": "^13.2.2"
