test.js removed

--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "This is a react live production app",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "parcel index.html",
-    "build": "parcel build index.html"
+    "build": "parcel build index.html",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
