--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "babel-jest": "^29.7.0",
     "buffer": "^6.0.3",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "parcel": "^2.9.3",
     "process": "^0.11.10",
     "sass-loader": "^13.2.2"
